--- a/Drop/Drop-Info.plist
+++ b/Drop/Drop-Info.plist
@@ -30,7 +30,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>.9</string>
+	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -38,12 +38,12 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>db-tta35f8sfuibet8</string>
+				<string>db-yii6grqm3mp900l</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>.9</string>
+	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>ParseDevAppID</key>
